Homework 5 - Refatoração da Service e Controller